<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>blickfeld_qb2_ros2_driver</name>
  <version>2.1.0</version>
  <description>ROS2 Driver for Blickfeld Qb2 Devices</description>
  <maintainer email="hamidreza.houshiar@blickfeld.com">Hamidreza Houshiar</maintainer>
  <maintainer email="martin.schwoerer@blickfeld.com">Martin Schwörer</maintainer>
  
  <license>BSD</license>
  <url type="website">https://www.blickfeld.com</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
